--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ APP_KEY=base64:7mJ04rZQNAiMzUc5V0ZHPMwa73yahiAFFab8juYbg50=
 APP_DEBUG=true
 APP_URL=http://localhost/sisconsulta/public/
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_LOCALE=pt_BR
+APP_FALLBACK_LOCALE=pt_BR
+APP_FAKER_LOCALE=pt_BR
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
